--- a/DHSApp/templates/account.html
+++ b/DHSApp/templates/account.html
@@ -1,24 +1,8 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-<link rel="stylesheet" href="/static/css/metro-bootstrap.css" type="text/css" media="screen" />
-</head>
 
-<body>
 {% block content %}
-<!--Navibar-->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-               
-                <a class="brand" href="">{{user.nickname}}</a>
-                <a class="brand" href="/main/add_post">Add Post</a>
-            	<a class="brand" href="/main/account">Setting</a>
-        		<a class="brand" href="{{logout}}">Sign Out</a>
-        	</div>
-        </div>
-    </div>
+
 
 <div class='well'>
 <h3>My account status</h3>
@@ -63,11 +47,3 @@
 </div>
 
 {% endblock %}
-<footer>
-	<p>
-		Copyright &copy; 2013 natsuyuu
-	</p>
-</footer>
-
-</body>
-</html>
