--- a/DHSApp/templates/single_post.html
+++ b/DHSApp/templates/single_post.html
@@ -1,28 +1,10 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-<link rel="stylesheet" href="/static/css/metro-bootstrap.css" type="text/css" media="screen" />
-</head>
+{% extends "base.html" %}
 
 
-<body>
 {% block content %}
-<!--Navibar-->
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-               
-                <a class="brand" href="">{{nickname}}</a>
-                <a class="brand" href="/main/add_post">Add Post</a>
-            <a class="brand" href="/main/account">Setting</a>
-        </a><a class="brand" href="{{logout}}">Sign Out</a>
-    </div>
 
-    </div>
-
-</div>
 <div class="well">
+
 
 <h3>{{post.title}}</h3>
 <p>{{subject}}</p>
@@ -62,13 +44,4 @@
 </div>
 
 
-     
- <footer>
-	<p>
-
-		Copyright &copy; 2013 natsuyuu
-	</p>
-</footer>
 {% endblock %}
-</body>
-</html>
