--- a/DHSApp/templates/index.html
+++ b/DHSApp/templates/index.html
@@ -3,13 +3,29 @@
 
 <head>
 <link rel="stylesheet" href="static/css/metro-bootstrap.css" type="text/css" media="screen" />
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-39218875-1']);
+  _gaq.push(['_setDomainName', 'dhs.sg']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>
 {% block content %}
 <div class="hero-unit">
   <h1>DHSLecture</h1>
-  <p>Alpha 0</p>
+  <p>Alpha 1</p>
   <p>
     <a class="btn btn-primary btn-large" href="{{login}}">
       Sign In
