--- a/DHSApp/templates/account.html
+++ b/DHSApp/templates/account.html
@@ -5,6 +5,14 @@
 
 
 <div class='well'>
+<div style='width:100px;height:100px;'>
+{% if not img %}
+<img src='/static/img/avatar.png'></img>
+{% endif %}
+{{img|safe}}
+</div> 
+
+
 <h3>My account status</h3>
 <p>{{user.user}}</p>
 
@@ -36,7 +44,7 @@
 </div>
 
 <div class='well'>
-<h3>Subject Setting</h3>
+<h4>Subject Setting</h4>
 {% for s in subject %}
 <span class='btn'>{{s}}</span>
 {% endfor %}
@@ -44,6 +52,71 @@
 </br>
  <a class="btn" href='/main/subchoose'>Change subject setting</a>
               
+</div>
+
+<div class='well'>
+<h4>Avatar Upload *Alpha test</h4>
+
+<form method='post' action='/main/upload' enctype="multipart/form-data">
+<div class="control-group">
+            
+            <div class="controls">
+            <input class="input-file" id="fileInput" type="file" name='img'>
+            </div>
+            <input type='submit'>
+</div>
+</div>
+</form>
+
+<div class='well'>
+<div>
+      <h4>Post Management</h4>
+      <div class="tabbable" style="margin-bottom: 18px;">
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#tab1" data-toggle="tab">Post</a></li>
+          <li><a href="#tab2" data-toggle="tab">Comment</a></li>
+          <li><a href="#tab3" data-toggle="tab">Coming soon:)</a></li>
+        </ul>
+        <div class="tab-content" style="padding-bottom: 9px; border-bottom: 1px solid #ddd;">
+          <div class="tab-pane active" id="tab1">
+            <table class="table table-striped">
+        <tbody>
+
+            {% for post in posts %}
+          <tr>
+            <td><a href="/main/post/{{post.pid}}">{{post.title}}</a></td>
+            <td>{{post.comment_num}} reply</td>
+            <td>{{post.post_time.strftime('%y-%m-%d %H:%M:%S')}}</td>
+            <td><a href='/main/editpost/{{post.pid}}'>Edit</a></td>
+            <td><a href='/main/deletepost/{{post.pid}}'>Delete</a></td>
+           {% endfor %}
+          </tr>
+        
+        </tbody>
+            </table>
+          </div>
+          <div class="tab-pane" id="tab2">
+            <table class="table table-striped">
+        <tbody>
+            {% for comment in comments %}
+          <tr>
+            <td><a href="/main/post/{{comment.relevant_post.pid}}">{{comment.content}}</a></td>
+          
+            <td>{{comment.post_time.strftime('%y-%m-%d %H:%M:%S')}}</td>
+            <td><a href='/main/editcomment/{{comment.cid}}'>Edit</a></td>
+            <td><a href='/main/deletecomment/{{comment.cid}}'>Delete</a></td>
+           {% endfor %}
+          </tr>
+        
+        </tbody>
+            </table>
+          </div>
+          <div class="tab-pane" id="tab3">
+            <p>You will see his/her like history here.</p>
+          </div>
+        </div>
+      </div> <!-- /tabbable -->
+</div>
 </div>
 
 {% endblock %}
